# PDFTools

./: .gitignore  LICENSE  README.md  config.yaml  config.yaml.example  pipeline_test.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  translate_pdf.py
scripts/: run_tests.sh
skills/: __init__.py  chunk_figure_merge.py  load_api_config.py  ocr_to_chunks.py  qwen_vl_ocr.py
skills/advanced_extractor/: __init__.py  extractor.py
skills/image_extractor/: __init__.py  extractor.py
skills/latex_builder/: __init__.py  builder.py  plaintext.py
skills/layout_detector/: __init__.py  detector.py
skills/math_extractor/: __init__.py  extractor.py
skills/pdf_searcher/: __init__.py  searcher.py
skills/quality_checker/: __init__.py  checker.py
skills/qwen_enhancer/: __init__.py  enhancer.py
skills/text_chunker/: __init__.py  chunker.py
skills/text_extractor/: __init__.py  extractor.py
skills/translator/: __init__.py  glossary.py  mock_translator.py  qwen_translator.py  translator.py
tests/: conftest.py  test_chunk_figure_merge.py  test_e2e_full_pipeline.py  test_full_flow_integration.py  test_parse_ocr_fallback.py
